--- a/MaterialDesign.DialogPlus.Examples/MaterialDesign.DialogPlus.Examples.csproj
+++ b/MaterialDesign.DialogPlus.Examples/MaterialDesign.DialogPlus.Examples.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
   </ItemGroup>
 
